--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -14,4 +14,8 @@
   .chart-items {
     @apply absolute top-0 right-0 md:right-10 h-4 w-4 bg-yellow-400 text-center rounded-full text-black font-bold;
   }
+
+  .hidden-menu-item {
+    @apply link hidden lg:inline-flex;
+  }
 }
