--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -18,4 +18,14 @@
   .hidden-menu-item {
     @apply link hidden lg:inline-flex;
   }
+
+  .button {
+    @apply p-2 text-xs md:text-sm bg-gradient-to-b from-yellow-200 to-yellow-400 border-yellow-300 rounded-sm focus:outline-none 
+    focus:ring-2 focus:ring-yellow-300 active:from-yellow-500;
+  }
+
+  .product-feed-container {
+    @apply grid grid-flow-row-dense md:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4
+    md:-mt-52 mx-auto;
+  }
 }
